# ML_in_Production

./: .gitignore  Makefile  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: runner.py
src/config/: .env  __init__.py  db_config.py  logger_config.py  model_config.py
src/db/: db.sqlite  db_model.py
src/model/: model_service.py
src/model/pipeline/: data_collection.py  data_preparation.py  model_buiding.py
