[project]
name = "ml_in_production"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikhil Murade",email = "muradenikhil@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "wemake-python-styleguide (>=1.6.1,<2.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
